test/files/neg/macro-bundle-object.check
macro-bundle-object.scala:11: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context): c.Expr[Any]
 found   : : Nothing
number of parameter sections differ
  def foo = macro Bundle.impl
      ^
one error found
